<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.ProfileFragment">


    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainWhite"
        android:gravity="center_vertical|end">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="22dp"
            android:src="@drawable/ic_share"
            android:contentDescription="@string/share_icon" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="18dp"
            android:src="@drawable/ic_more"
            android:contentDescription="@string/for_more_inform" />

    </LinearLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/mainWhite"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivProfile"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginTop="28dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/img_nature"
                app:shapeAppearanceOverlay="@style/circle" />

            <TextView
                android:id="@+id/tvFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:paddingHorizontal="24dp"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:textColor="#818181"
                android:textSize="16sp" />

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/tvFollow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/folows"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="5dp">

                <EditText
                    android:singleLine="true"
                    android:id="@+id/edtSearch"
                    android:layout_width="0dp"
                    android:drawablePadding="8dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_search_background"
                    android:drawableStart="@drawable/ic_search_2"
                    android:hint="@string/search_your_pins"
                    android:padding="10dp"
                    android:paddingHorizontal="2dp"
                    android:textColor="@color/black"
                    android:textColorHint="#90000000"
                    android:inputType="text"
                    android:autofillHints="name" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:src="@drawable/ic_plus"
                    android:contentDescription="@string/add" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSaved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>