<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".ui.fragments.PhotoDetailFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nestedScrollView">

        <LinearLayout
            android:id="@+id/llWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/mainWhite"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="10dp"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.jsibbold.zoomage.ZoomageView
                            android:transitionName="image"
                            android:id="@+id/ivDetailPhoto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/img_places"
                            app:zoomage_animateOnReset="true"
                            app:zoomage_autoCenter="true"
                            app:zoomage_autoResetMode="UNDER"
                            app:zoomage_maxScale="8"
                            app:zoomage_minScale="0.6"
                            app:zoomage_restrictBounds="false"
                            app:zoomage_translatable="true"
                            app:zoomage_zoomable="true" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#1A000000">

                            <ImageView
                                android:id="@+id/ivMore"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_margin="16dp"
                                android:src="@drawable/ic_more"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:tint="@color/mainWhite"
                                android:contentDescription="@string/for_more_inform" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </FrameLayout>

                    <LinearLayout
                        android:background="@color/mainWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/ivProfile"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:adjustViewBounds="true"
                            android:background="@color/grey"
                            android:scaleType="centerCrop"
                            android:src="@drawable/img_nature"
                            app:shapeAppearanceOverlay="@style/circle" />


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:paddingHorizontal="5dp">

                            <TextView
                                android:id="@+id/tvUsername"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvNumFollowers"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/_10k_followers"
                                android:textColor="#90000000"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:background="@drawable/textview_background"
                            android:padding="10dp"
                            android:text="@string/follow"
                            android:textColor="#000000" />
                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@color/mainWhite"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="8dp"
                            android:src="@drawable/ic_comment"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <LinearLayout
                            android:background="@color/mainWhite"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="4dp"
                                android:background="@drawable/textview_background"
                                android:padding="16dp"
                                android:paddingHorizontal="6dp"
                                android:text="@string/view"
                                android:textColor="#000000"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tvSave"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:background="@drawable/textview_background_red"
                                android:padding="16dp"
                                android:paddingHorizontal="6dp"
                                android:text="@string/save"
                                android:textColor="@color/mainWhite"
                                android:textSize="16sp" />

                        </LinearLayout>


                        <ImageView
                            android:id="@+id/ivShare"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="8dp"
                            android:src="@drawable/ic_share"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:contentDescription="@string/share_icon" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:background="@color/mainWhite"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:background="@color/mainWhite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/comments"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvComment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/love_this_pin_let"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp">

                        <FrameLayout
                            android:layout_width="40dp"
                            android:layout_height="40dp">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:id="@+id/ivUserProfile"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:adjustViewBounds="true"
                                android:background="@color/grey"
                                android:scaleType="centerCrop"
                                android:src="@drawable/img_nature"
                                android:visibility="gone"
                                app:shapeAppearanceOverlay="@style/circle" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <TextView
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:background="@drawable/ic_profile"
                                    android:gravity="center"
                                    android:text="@string/d"
                                    android:textColor="@color/white"
                                    android:textSize="16sp" />

                            </LinearLayout>

                        </FrameLayout>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="18dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:hint="@string/add_a_comment" />

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:background="@color/mainWhite"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:background="@color/mainWhite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingVertical="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/more_like_this"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvLikeThis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@color/mainWhite" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back" />

    <include
        android:id="@+id/bottomSheetMore"
        layout="@layout/bottom_sheet_more" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>